@@ -850,7 +850,7 @@ meta_ui_parse_modifier (const char          *accel,
   
   *mask = 0;
 
-  if (strcmp (accel, "disabled") == 0)
+  if (accel == NULL || strcmp (accel, "disabled") == 0)
     return TRUE;
   
   meta_ui_accelerator_parse (accel, &gdk_sym, &gdk_code, &gdk_mask);
